--- a/references.bib
+++ b/references.bib
@@ -336,7 +336,7 @@
 
 @article{wongpiromsarn2012receding,
   title={Receding horizon temporal logic planning},
-  author={T. Wongpiromsarn, and U. Topcu and R.M. Murray},
+  author={T. Wongpiromsarn and U. Topcu and R.M. Murray},
   journal={IEEE Trans. Automatic Contr.},
   volume={57},
   number={11},
@@ -365,6 +365,25 @@
 	title={Intelligent planning - a decomposition and abstraction based approach},
 	author={Qiang Yang},
 	booktitle={Artificial intelligence},
-	year={1997}
+	year={1997},
 	publisher={Springer Berlin Heidelberg}
 }
+
+@INPROCEEDINGS{sun2019,
+	author={X. {Sun} and R. {Nambiar} and M. {Melhorn} and Y. {Shoukry} and P. {Nuzzo}},
+	booktitle={ICRA}, 
+	title={DoS-Resilient Multi-Robot Temporal Logic Motion Planning}, 
+	year={2019},
+	volume={},
+	number={},
+	pages={6051-6057}}
+
+
+@INPROCEEDINGS{Srinivasan2018,
+	author={M. {Srinivasan} and S. {Coogan} and M. {Egerstedt}},
+	booktitle={CDC}, 
+	title={Control of Multi-Agent Systems with Finite Time Control Barrier Certificates and Temporal Logic}, 
+	year={2018},
+	volume={},
+	number={},
+	pages={1991-1996}}
